--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -22,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ImageProcessing"></activity>
+        <activity android:name=".OcrCaptureActivity"></activity>
     </application>
 
 </manifest>
