--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".ImageProcessing"></activity>
         <activity android:name=".OcrCaptureActivity"></activity>
-        <activity android:name=".TestWebInfoViewer"></activity>
+        <activity android:name=".CodeSubmission"></activity>
         <activity android:name=".Settings"></activity>
     </application>
 
